@@ -14,9 +14,9 @@ EOF
 
 ### test_pass_through() {
 $enscript -G2r --quiet --pass-through -p- test_input.ps \
-  | tail +2 >$output
+  | tail -n +2 >$output
 
-result=`tail +2 test_input.ps | cmp - $output`
+result=`tail -n +2 test_input.ps | cmp - $output`
 
 if test "X$result" != "X"; then
   exit 1
@@ -34,9 +34,9 @@ EOF
 
 ### test_pass_through() {
 $enscript -G2r --quiet --pass-through -p- test_input.ps \
-  | tail +2 >$output
+  | tail -n +2 >$output
 
-result=`tail +2 test_input.ps | cmp - $output`
+result=`tail -n +2 test_input.ps | cmp - $output`
 
 if test "X$result" != "X"; then
   exit 1
@@ -52,9 +52,9 @@ EOF
 
 ### test_pass_through() {
 $enscript -G2r --quiet --pass-through -p- test_input.pcl \
-  | tail +2 >$output
+  | tail -n +2 >$output
 
-result=`tail +2 test_input.pcl | cmp - $output`
+result=`tail -n +2 test_input.pcl | cmp - $output`
 
 if test "X$result" != "X"; then
   exit 1
@@ -70,9 +70,9 @@ EOF
 
 ### test_pass_through() {
 $enscript -G2r --quiet --pass-through -p- test_input.pcl \
-  | tail +2 >$output
+  | tail -n +2 >$output
 
-result=`tail +2 test_input.pcl | cmp - $output`
+result=`tail -n +2 test_input.pcl | cmp - $output`
 
 if test "X$result" != "X"; then
   exit 1
