@@ -1,3 +1,8 @@
+2012-09-27  Jerome Roovers  <jer@gentoo.org>
+
+	* src/tests/passthrough.test: Remove obsolete "+2" arguments to
+	tail.
+
 2012-09-25  Tim Retout  <diocles@gnu.org>
 
 	* configure.ac: Release 1.6.6.
